fixed dropdown spacing on mobile

--- a/assets/scss/components/_buttons.scss
+++ b/assets/scss/components/_buttons.scss
@@ -130,6 +130,20 @@
     &:nth-of-type(5) {
       top: 180px;
     }
+
+    @include bp(sm) {
+      &:nth-of-type(3) {
+        top: 74px;
+      }
+
+      &:nth-of-type(4) {
+        top: 111px;
+      }
+
+      &:nth-of-type(5) {
+        top: 147px;
+      }
+    }
   }
 
   @include bp(lg) {
